# hexlet-django-blog

./: Makefile  README.md  pyproject.toml
hexlet_django_blog/: settings.py  urls.py  views.py
hexlet_django_blog/article/: admin.py  forms.py  models.py  urls.py  views.py
hexlet_django_blog/article/migrations/: 0001_initial.py
hexlet_django_blog/article/templates/articles/: index.html
hexlet_django_blog/templates/: base.html  navigation.html
hexlet_django_blog/templates/articles/: article.html  create.html  index.html  update.html
